--- a/templates/animals/show.html
+++ b/templates/animals/show.html
@@ -11,9 +11,9 @@
             <p>D.o.B: {{animal.date_of_birth}}</p>
         </section>
         <br>
-        <section>
-            <h4>Treatment Notes</h4>
-            {{animal.treatment_notes}}
+        <section class="treatment-notes">
+            <h3>Treatment Notes</h3>
+            <p>{{animal.treatment_notes}}</p>
         </section>
     </div>
         <br>
