--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/search.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/vets.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/owners.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/animal_edit.css') }}">
+
 
 
 
@@ -38,7 +40,7 @@
     {% endblock %}
 
     <footer>
-        <h4>The Vet Helper - Gary Darnell - E49</h4>
+        <h4>The Vet Helper - Gary Darnell - CodeClan - E49</h4>
         <nav>
             <ul class="main-nav">
                 <li><a href="/animals">Display Records</a></li>
