--- a/templates/owners/show.html
+++ b/templates/owners/show.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h3>{{owner.name}}</h3>
+<h2>{{owner.name}}</h2>
 
-<section>
+<section class="owner-details">
     <p>Contact Number: {{owner.number}}</p>
     <p>Address: {{owner.address}}</p>
     <p>Postcode: {{owner.postcode}}</p>
