--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,8 @@ body {
 
 body p {
     padding-left: 5px;
+    color: #0b3c5d;
+    font-size: 25px;
 }
 
 body h3 {
@@ -20,6 +22,7 @@ body h1 {
 
 body h2 {
     padding-left: 5px;
+    font-size: 40px;
 }
 
 body form {
@@ -35,6 +38,16 @@ body form {
     min-height: 45px;
 }
 
+.sticky {
+    position: fixed;
+    top:0;
+    width: 100%;
+
+}
+
+.sticky + .main-header{
+    padding-top: 20px;
+}
 header a {
     text-decoration: none;
     color: #d9b310;
