Added more CSS to the add new owner page and edit animal page.

--- a/static/css/animal_edit.css
+++ b/static/css/animal_edit.css
@@ -9,6 +9,14 @@
     padding-bottom: 15px;
 }
 
-.animal-edit * input {
-    
+.animal-edit * input{
+    color: #05386b;
+}
+
+.animal-edit * textarea {
+    color: #05386b;
+}
+
+.animal-edit * select {
+    color: #05386b;
 }
