--- a/templates/owners/new.html
+++ b/templates/owners/new.html
@@ -5,25 +5,28 @@
     Add new Owner
 </h2>
 <form action="/owners" method='POST'>
-    <div>
-        <label for="name">Owner name:</label>
-        <input type="text" name="name" id="name">
-    </div>
-    <div>
-        <label for="number">Contact Number:</label>
-        <input type="text" name="number" id="number">
-    </div>
-    <div>
-        <label for="address">Address</label>
-        <input type="text" name="address" id="address">
-    </div>
-    <div>
-        <label for="postcode"></label>
-        <input type="text" name="postcode" id="postcode">
-    </div>
-    <div>
+    <section class="new-owner">
+        <div>
+            <label for="name">Owner name:</label>
+            <input type="text" name="name" id="name">
+        </div>
+        <div>
+            <label for="number">Contact Number:</label>
+            <input type="text" name="number" id="number">
+        </div>
+        <div>
+            <label for="address">Address</label>
+            <input type="text" name="address" id="address">
+        </div>
+        <div>
+            <label for="postcode">Postcode:</label>
+            <input type="text" name="postcode" id="postcode">
+        </div>
+    </section>
+    <br>
+    <section class="new-owner-submit">
         <input type="submit" value="Add New owner">
-    </div>
+    </section>    
 </form>
 
 {% endblock %}
