--- a/templates/owners/edit.html
+++ b/templates/owners/edit.html
@@ -4,26 +4,30 @@
 <h2>
     Edit - {{owner.name}}'s Profile'
 </h2>
-<form action="/owners/{{owner.id}}" method='POST'>
-    <div>
-        <label for="name">Owner name:</label>
-        <input type="text" name="name" id="name" value="{{owner.name}}">
+<section>
+    <form action="/owners/{{owner.id}}" method='POST'>
+        <div class='owner-edit'>
+            <div>
+                <label for="name">Owner name:</label>
+                <input type="text" name="name" id="name" value="{{owner.name}}">
+            </div>
+            <div>
+                <label for="number">Contact Number:</label>
+                <input type="text" name="number" id="number" value="{{owner.number}}">
+            </div>
+            <div>
+                <label for="address">Address</label>
+                <input type="text" name="address" id="address" value="{{owner.address}}">
+            </div>
+            <div>
+                <label for="postcode">Postcode:</label>
+                <input type="text" name="postcode" id="postcode" value="{{owner.postcode}}">
+            </div>
+        <br>
     </div>
-    <div>
-        <label for="number">Contact Number:</label>
-        <input type="text" name="number" id="number" value="{{owner.number}}">
-    </div>
-    <div>
-        <label for="address">Address</label>
-        <input type="text" name="address" id="address" value="{{owner.address}}">
-    </div>
-    <div>
-        <label for="postcode">Postcode:</label>
-        <input type="text" name="postcode" id="postcode" value="{{owner.postcode}}">
-    </div>
-    <div>
+    <section class="owner-edit-submit">    
         <input type="submit" value="Update">
-    </div>
-</form>
-
+    </section>
+    </form>
+</section>
 {% endblock %}
