--- a/templates/owners/new.html
+++ b/templates/owners/new.html
@@ -15,7 +15,7 @@
             <input type="text" name="number" id="number">
         </div>
         <div>
-            <label for="address">Address</label>
+            <label for="address">Address:</label>
             <input type="text" name="address" id="address">
         </div>
         <div>
