--- a/templates/vets/new.html
+++ b/templates/vets/new.html
@@ -5,28 +5,30 @@
 <h2>
     Add a new vet
 </h2>
-<section></section>
+<section>
     <form action="/vets" method="POST"  class="new-vet">
         <div>
-            <label for="first_name">First name:</label>
+            <label for="first_name">First name: </label>
             <input type="text" name="first_name" id="first_name">
         </div>
         <div>
-            <label for="last_name">Last name:</label>
+            <label for="last_name">Last name: </label>
             <input type="text" name="last_name" id="last_name">
         </div>
         <div>
-            <label for="working_days">Days in office:</label>
+            <label for="working_days">Days in office: </label>
             <input type="text" name="working_days" id="working_days">
+            <br>
             <small>Seperate with a comma.</small>
         </div>
         <div>
-            <label for="date_of_birth">D.o.B</label>
+            <label for="date_of_birth">D.o.B: </label>
             <input type="date" name="date_of_birth" id="date_of_birth">
         </div>
-        <div>
+        <br>
+        <section>
             <input type="submit" value="Add">
-        </div>
+        </section>
     </form>
 </section>
 {% endblock %}
